--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="container  mx-auto p-6 ">
         <div class="flex ietm-center justify-between">
             <div>
-                <img src="/dist/images/logo.png" alt=" Tailwind logo" width="200px">
+                <img src="./dist/images/logo.png" alt=" Tailwind logo" width="200px">
             </div>
             <div class="hidden  md:flex space-x-6 items-center">
                 <a href="#" class="text-slate-900 hover:text-slate-500">Portfolio</a>
@@ -110,7 +110,7 @@
                     Copyright &copy; <span class="date">0000</span>, All rights Reserved
                 </div>
                 <div>
-                    <img src="/dist/images/logodow.png" alt="logo" class="h-8">
+                    <img src="./dist/images/logodow.png" alt="logo" class="h-8">
                 </div>
                 <div class="flex space-x-4">
                     <a href="">
