--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.min.css">
     <link rel="stylesheet" href="./dist/style.css">
-    <title>Tailwind Css Cours</title>
+    <title>Tailwind Css Project</title>
 </head>
 
 <body>
@@ -166,7 +166,7 @@
 
 
 
-    <script src="/dist/js/script.js"></script>
+    <script src="./dist/js/script.js"></script>
 </body>
 
 </html>
